fix: instruction wrapped with suspense

--- a/src/app/pages/instruction/style.module.css
+++ b/src/app/pages/instruction/style.module.css
@@ -9,7 +9,7 @@
     --navigation-shadow: rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 100dvh;
-    overflow: auto;
+    overflow: hidden;
     background-color: var(--background-color);
 }
 
@@ -24,7 +24,7 @@
     --navigation-shadow: rgba(255, 255, 255, 0.1);
     width: 100%;
     height: 100dvh;
-    overflow: auto;
+    overflow: hidden;
     background-color: var(--slate-800);
 } 
 
@@ -37,6 +37,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    overflow: auto;
 }
 
 .howToListenText{
